@@ -2,8 +2,6 @@ package dev.deepdive.spring.config;
 
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.concurrent.ThreadFactory;
-import java.util.concurrent.atomic.AtomicInteger;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.scheduling.concurrent.ThreadPoolTaskExecutor;
@@ -24,15 +22,6 @@ public class ExecutorConfig {
 
     @Bean(destroyMethod = "shutdown")
     public ExecutorService javaExecutorService() {
-        return Executors.newFixedThreadPool(2, namedThreadFactory("java-executor-"));
-    }
-
-    private ThreadFactory namedThreadFactory(String prefix) {
-        AtomicInteger sequence = new AtomicInteger();
-        return runnable -> {
-            Thread thread = new Thread(runnable);
-            thread.setName(prefix + sequence.incrementAndGet());
-            return thread;
-        };
+        return Executors.newFixedThreadPool(2, Thread.ofPlatform().name("java-executor-", 1).factory());
     }
 }
